objects/agf__ADM_Column_History__c.object
<CustomObject>
    <fields>
        <fullName>agf__Column__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Column</label>
        <referenceTo>agf__ADM_Column__c</referenceTo>
        <relationshipLabel>Column History</relationshipLabel>
        <relationshipName>Column_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Duration_By_Work_Days__c</fullName>
        <description>This is duration by business days. How many days is between Time Left and Time entered
https://help.salesforce.com/help/pdfs/en/formula_date_time_tipsheet.pdf</description>
        <formula>(5 * ( FLOOR( (DATEVALUE (IF( ISBLANK(agf__Time_Left__c) , NOW() , agf__Time_Left__c)) - DATE( 1900, 1, 8) ) / 7 ) ) + 
			MIN( 5, MOD( DATEVALUE(IF( ISBLANK(agf__Time_Left__c) , NOW() , agf__Time_Left__c)) - DATE( 1900,
				        1, 8), 7 )
		       ) )

-
(5 * ( FLOOR( ( DATEVALUE(agf__Time_Entered__c)- DATE( 1900, 1, 8) ) / 7 ) )  + MIN( 5, MOD( DATEVALUE(agf__Time_Entered__c) - DATE( 1900,
1, 8), 7 ) ) )</formula>
        <label>Duration_By_Work_Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Duration__c</fullName>
        <description>Duration with 4 precision points. Here integer part is number of days and fractional part can be converted into hours by multiplying by 24.</description>
        <formula>IF( ISBLANK(agf__Time_Left__c) , NOW() , agf__Time_Left__c)  -  agf__Time_Entered__c</formula>
        <label>Duration</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Time_Entered__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>The timestamp for when a work record enters a column</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Entered</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Time_Left__c</fullName>
        <description>The time stamp for when a work record left a column (and be empty if the work record is still present).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Time Left</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Column History</relationshipLabel>
        <relationshipName>Column_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Column History</label>
    <nameField>
        <displayFormat>CH-{0000000000}</displayFormat>
        <label>Column History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Column History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>